--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Rahul Negi | Portfolio">
+  <meta itemprop="name" content="Lucky Negi | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
     content="https://raw.githubusercontent.com/rahulnegi20/portfolio/master/Images/card.png">
