--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://soumyajit.vercel.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Rahul | Portfolio">
+  <meta property="og:title" content="Lucky | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/rahulnegi20/portfolio/master/Images/card.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Rahul Negi | Portfolio">
+  <meta name="twitter:title" content="Lucky Negi | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
     content="https://raw.githubusercontent.com/rahulnegi20/portfolio/master/Images/card.png">
