--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta itemprop="name" content="Lucky Negi | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/rahulnegi20/portfolio/master/Images/card.png">
+    content="https://github.com/igennova/portfolio/blob/master/Images/card.png">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://soumyajit.vercel.app">
@@ -23,14 +23,14 @@
   <meta property="og:title" content="Lucky | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/rahulnegi20/portfolio/master/Images/card.png">
+    content="https://github.com/igennova/portfolio/blob/master/Images/card.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Lucky Negi | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/rahulnegi20/portfolio/master/Images/card.png">
+    content="https://github.com/igennova/portfolio/blob/master/Images/card.png">
 </head>
 
 <body>
